Updated mysql host name

--- a/App.config
+++ b/App.config
@@ -37,8 +37,8 @@
 		</root>
 	</log4net>
 	<connectionStrings>
-		<add name="DataContext" providerName="MySql.Data.MySqlClient" connectionString="Data Source=mysql;Database=apis;User Id=apis;Password={{ password }};" />
-		<add name="NuGetContext" providerName="MySql.Data.MySqlClient" connectionString="Data Source=mysql;Database=nuget;User Id=apis;Password={{ password }};" />
+		<add name="DataContext" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;Database=apis;User Id=apis;Password={{ password }};" />
+		<add name="NuGetContext" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;Database=nuget;User Id=apis;Password={{ password }};" />
 	</connectionStrings>
 	<entityFramework codeConfigurationType="MySql.Data.Entity.MySqlEFConfiguration, MySql.Data.Entity.EF6">
 		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
