--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,4 @@ addons:
     - sshpass
 before_install:
 - openssl aes-256-cbc -K $encrypted_b68dbcd8babf_key -iv $encrypted_b68dbcd8babf_iv
-  -in pass.enc -out pass -d
-- openssl aes-256-cbc -K $encrypted_b68dbcd8babf_key -iv $encrypted_b68dbcd8babf_iv
-  -in config.enc -out config -d
+  -in sensitive.tar.enc -d | tar x
