--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: generic
+script: ./compile.sh
 deploy:
   provider: script
   script: "./deploy.sh"
@@ -7,6 +8,7 @@ addons:
   apt:
     packages:
     - sshpass
+    - composer
 before_install:
 - openssl aes-256-cbc -K $encrypted_b68dbcd8babf_key -iv $encrypted_b68dbcd8babf_iv
   -in sensitive.tar.enc -d | tar x
