Rewrote some code

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,1 @@
-/*
-!/compile.sh
-!/deploy.sh
-!/.gitignore
-!/LICENSE
-!/README.md
-!/sensitive.tar.enc
-!/src/
-!/.travis.yml
-/src/vendor/
-/src/include/secrets.json
-/src/include/dev-config.php
+/deploy.ftp
